# darklake-monorepo

./: .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .prettierignore  README.md  docker-compose.yml  input.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CODEOWNERS  dependabot.yml  pull-request-template.md
.github/workflows/: release-server.yml  test-anchor.yml  test-server.yml  test-web.yml
anchor/: .eslintrc.json  Anchor.toml  Cargo.toml  Trident.toml  jest.config.ts  package.json  project.json
anchor/migrations/: deploy.ts  devnet-setup.ts  devnet-update.ts
anchor/programs/darklake/: Cargo.toml
anchor/programs/darklake/src/: debug.rs  errors.rs  lib.rs
anchor/programs/darklake/src/constants/: mod.rs  verifying_key.rs  verifying_key_exp.rs
anchor/programs/darklake/src/instructions/: add_liquidity.rs  confidential_swap.rs  confidential_swap_exp.rs  ibrl_swap.rs  initialize_pool.rs  lsh_swap.rs  mod.rs  remove_liquidity.rs
anchor/programs/darklake/src/state/: pool.rs
anchor/programs/darklake/src/zk/: lsh.rs  mod.rs  poseidon.rs  verifier.rs
anchor/src/: utils.ts
anchor/tests/: Cargo.toml  circuit.spec.ts  darklake.spec.ts  groth16.spec.ts  proof.ts
anchor/tests/jest/: circuit.spec.ts  darklake.spec.ts  darklakeExp.spec.ts  groth16.spec.ts  helpers.ts  ibrl_proof.ts  proof.ts  proofExp.ts  setup.ts
anchor/trident-tests/fuzz_tests/: Cargo.toml
anchor/trident-tests/fuzz_tests/fuzz_0/: fuzz_instructions.rs  test_fuzz.rs  utils.rs
anchor/trident-tests/fuzz_tests/fuzz_0/groth16/: swap.r1cs  swap.wasm  swap_final.zkey
apps/anchor/: Anchor.toml  package.json  tsconfig.json
apps/anchor/migrations/: deploy.ts  setup.ts
apps/anchor/tests/: Cargo.toml
apps/server/: .env.example  .eslintrc.js  Dockerfile  README.md  package.json
apps/server/prisma/: schema.prisma  seed.ts
apps/server/src/: AppModule.ts  config.ts  main.ts
apps/web/: .env.example  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: instrumentation-client.ts  instrumentation.ts
circuits/: README.md  division.circom  division_test.circom  gadget.circom  gadget.r1cs  gadget_0000.zkey  ibrl_swap.circom  ibrl_swap.r1cs  ibrl_swap.sym  ibrl_swap_0001.zkey  ibrl_verification_key.json  ibrl_verification_key.rs  parse_vk_to_rs.js  pot19_0000.ptau  pot19_0001.ptau  pot19_final.ptau  pot19_final_prepared.ptau  pot_cont.ptau  pot_final.ptau  regenerate.sh  swap.circom  swap.r1cs  swap.sym  swap_0000.zkey  swap_0001.zkey  swap_final.zkey  verification_key.json  verifying_key.rs
circuits/circomlib/: bitify.circom
circuits/gadget_js/: gadget.wasm
circuits/ibrl_swap_js/: ibrl_swap.wasm
circuits/swap_js/: swap.wasm
circuitsV2/: swap.circom  swap.r1cs  swap.sym  swap_final.zkey  verification_key.json
web/: .env.example  .eslintrc.json  next.config.ts  package.json  tailwind.config.js  tailwind.config.ts
web-new/: .env.example  package.json  tailwind.config.ts
web-new/src/app/: globals.css  layout.tsx  page.tsx
web-new/src/components/: AddressMevLookup.tsx  Footer.tsx  Header.tsx  MainWrapper.tsx  MevExtractionCard.tsx
web-new/src/constants/: links.ts  storage.ts
web-new/src/hooks/: useSupabaseSession.ts
web-new/src/providers/: SupabaseAuthProvider.tsx
web-new/src/services/: supabase.ts
web-new/src/utils/: blockchain.ts
web-old/: next.config.js  tsconfig.json
web-old/app/: layout.tsx
web-old/components/landing-page/: landing-page.tsx
web-old/components/liquidity-manager/: liquidity-manager.tsx
web-old/components/ui/: contact-form.tsx  input.tsx  textarea.tsx
web-old/constants/: tokens.json
web-old/hooks/: usePyusdFaucet.ts  useSwapEstimate.ts  useToast.tsx  useTokenBalance.ts
web-old/lib/: mailchimp.ts  prepare-proof.ts
web/app/: global.css  globals.css  layout.tsx
web/components/account/: account-data-access.tsx
web/components/cluster/: cluster-data-access.tsx  cluster-ui.tsx
web/components/landing-page/: landing-page.tsx
web/components/liquidity-manager/: liquidity-manager.tsx
web/components/solana/: solana-provider.tsx
web/components/token-swapper/: token-swapper.tsx
web/components/ui/: command.tsx  (+3 more)
web/hooks/: useSolanaFaucet.ts  useSwapEstimate.ts  useTokenBalance.ts
web/lib/: darklake-swap.ts
(+171 files in other folders)
