[package]
name = "tests"
version = "0.1.0"
description = "Darklake E2E tests"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
darklake = { version = "0.1.0", path = "../programs/darklake" }
groth16-solana = "0.0.3"
rand = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false }

[dev-dependencies]
serde_json = "1.0"
