[package]
name = "darklake"
version = "0.1.0"
description = "Darklake"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darklake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "2.0.1"
mpl-token-metadata = "4.1.2"
jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish" }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish" }
ark-ff = { version = "0.4.0", default-features = false, features = [ "asm" ] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
ark-std = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
rand_chacha = "0.3.1"
rand_core = "0.3.1"
