[package]
name = "darklake"
version = "0.1.0"
description = "Darklake"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darklake"

[features]
default = ["verbose"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
verbose = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
groth16-solana = "0.0.3"
solana-program = "2.0.1"
mpl-token-metadata = "4.1.2"
poseidon-rs = { path = "vendor/poseidon-rs" }
ff_ce = { version = "0.11", features = ["derive"] }
rand = { version = "0.4", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-std = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["crh"] }