[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
arbitrary = "1.3.0"
assert_matches = "1.4.0"
mpl-token-metadata = "4.1.2"
anchor-spl = "0.30.1"
rand = "0.8" 

[dependencies.trident-client]
version = "0.8.1"

[dependencies.darklake]
path = "../../programs/darklake"
